Master search linking to web request

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <form action="/test/submit" method="POST">
+    <form action="/search/submit" method="POST">
         <input type="text" name="id"/>
       <button type="submit">Submit</button>
     </form>
