--- a/views/testing.html
+++ b/views/testing.html
@@ -11,15 +11,26 @@
 <body style="background-color:#FFFFFF">
 
     <div class="container">
-        <div class="form-group row" style="margin: 25%">
-            <!--<label for="example-search-input" class="col-2 col-form-label">Search</label>-->
-            <div class="col-10">
-                <input class="form-control" type="search" placeholder="#hashtag" onfocus="this.placeholder = ''" onblur="this.placeholder = '#hashtag'" style="opacity: .5; border:solid 1px #FFCB0F" id="example-search-input">
 
+        <div class="text-center">
+            <img src="assets/images/tryforce.jpg" height="250px" width="420px" style="margin-top:100px"/>
+            <div class="form-group row" style="margin:5% 25%">
+                <!--<label for="example-search-input" class="col-2 col-form-label">Search</label>-->
+                <div class="col-10">
+                    <input class="form-control" type="search" placeholder="#hashtag" onfocus="this.placeholder = ''" onblur="this.placeholder = '#hashtag'" style="opacity: .5; border:solid 1px #FFCB0F" id="example-search-input">
+
+                </div>
+                <button type="submit" class="btn btn-primary" style="background-color:#FFADC9; color: white; border:none; font-weight: bold; ">Search</button>
             </div>
-            <button type="submit" class="btn btn-primary" style="background-color:#FFADC9; color: white; border:none; font-weight: bold; ">Search</button>
+
         </div>
+
     </div>
+
+
+        <div class="container text-center">
+            <span style="color: lightseagreen; font-size: .8em">McHacks 2017 <br> Project by Roger, Simon, Chris and Karen</span>
+        </div>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
