--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,54 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+</head>
+<body style="background-color:#FFFFFF">
+
+<div class="container">
+
+  <div class="text-center">
+    <img src="/images/tryforce.jpg" height="250px" width="420px" style="margin-top:100px"/>
+    <form action="/search/submit" method="POST">
+    <div class="form-group row" style="margin:5% 25%">
+      <!--<label for="example-search-input" class="col-2 col-form-label">Search</label>-->
+      <div class="col-10">
+        <input class="form-control" type="search" name="id" placeholder="#hashtag" onfocus="this.placeholder = ''" onblur="this.placeholder = '#hashtag'" style="opacity: .5; border:solid 1px #FFCB0F" id="example-search-input">
+
+      </div>
+      <button type="submit" class="btn btn-primary" style="background-color:#FFADC9; color: white; border:none; font-weight: bold; ">Search</button>
+    </div>
+    </form>
+  </div>
+
+</div>
+
+
+<div class="container text-center">
+  <span style="color: lightseagreen; font-size: .8em">McHacks 2017 <br> Project by Roger, Simon, Chris and Karen</span>
+</div>
+
+<!-- jQuery first, then Tether, then Bootstrap JS. -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+
+
+<!--
+
+
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -11,3 +61,4 @@
     </form>
   </body>
 </html>
+-->
