logo change and new search link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 <div class="container">
 
   <div class="text-center">
-    <img src="/images/tryforce.jpg" height="250px" width="420px" style="margin-top:100px"/>
+    <img src="/images/triforce.png" height="250px" width="420px" style="margin-top:100px"/>
     <form action="/search/submit" method="POST">
     <div class="form-group row" style="margin:5% 25%">
       <!--<label for="example-search-input" class="col-2 col-form-label">Search</label>-->
