--- a/views/search.ejs
+++ b/views/search.ejs
@@ -12,9 +12,9 @@
 <body>
 <div class="container">
 
-        <h1 style="margin:20px;"><%= output %> </h1>
-
-
+    <h1 style="margin:10px;"><%= output %></h1>
+        <a href="/" style="margin:10px">New search</a>
+<br/><br/>
 <!--twitter-->
     <div class="row">
 <% for(var i=0; i < twitter.length; i=i+2) { %>
