because karen wants me to change the colors last minute before submission

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,10 +18,10 @@
     <div class="form-group row" style="margin:5% 25%">
       <!--<label for="example-search-input" class="col-2 col-form-label">Search</label>-->
       <div class="col-10">
-        <input class="form-control" type="search" name="id" placeholder="#hashtag" onfocus="this.placeholder = ''" onblur="this.placeholder = '#hashtag'" style="opacity: .5; border:solid 1px #FFCB0F" id="example-search-input">
+        <input class="form-control" type="search" name="id" placeholder="#hashtag" onfocus="this.placeholder = ''" onblur="this.placeholder = '#hashtag'" style="opacity: .5; border:solid 1px #a87961" id="example-search-input">
 
       </div>
-      <button type="submit" class="btn btn-primary" style="background-color:#FFADC9; color: white; border:none; font-weight: bold; ">Search</button>
+      <button type="submit" class="btn btn-primary" style="background-color:#00aced; color: white; border:none; font-weight: bold; ">Search</button>
     </div>
     </form>
   </div>
@@ -30,7 +30,7 @@
 
 
 <div class="container text-center">
-  <span style="color: lightseagreen; font-size: .8em">McHacks 2017 <br> Project by Roger, Simon, Chris and Karen</span>
+  <span style="color: darkgrey; font-size: .8em">McHacks 2017 <br> Project by Roger, Simon, Chris and Karen</span>
 </div>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
